chore: apply linting suggestions
Signed-off-by: Umar Hussain <umarhussain.work@gmail.com>